tasks.withType(JavaCompile) {
    options.compilerArgs += "--enable-preview"
}

tasks.withType(Test) {
    jvmArgs += ['--enable-preview', '--add-opens=java.base/java.lang=ALL-UNNAMED']
}

tasks.withType(JavaExec) {
    jvmArgs += ['--enable-preview', '--add-opens=java.base/java.lang=ALL-UNNAMED']
}

java {
    sourceCompatibility = JavaVersion.VERSION_19
    targetCompatibility = JavaVersion.VERSION_19
}